# mcp

./: README.md  claude_desktop_config.json  client_demo.py
integration_tests/: verify_stack.py
servers/auditor/: pyproject.toml  server.py
servers/deployer/: pyproject.toml  server.py
servers/ipam/: pyproject.toml  server.py
servers/librarian/: pyproject.toml  server.py
servers/observer/: pyproject.toml  server.py
servers/traffic_gen/: pyproject.toml  server.py
servers/verifier/: README.md  docker-compose.yml  pyproject.toml
servers/verifier/src/: batfish_utils.py  host_utils.py  server.py
servers/verifier/tests/: cisco_valid.cfg  netplan_invalid.yaml  netplan_valid.yaml  verify_server.py
shared/: inventory.yaml
